# ai-news-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  graph_builder.py  main.py  pyproject.toml
agents/: collector_agent.py  copywriter_agent.py  critic_agent.py  designer_agent.py  filtering_agent.py  internal_publisher_agent.py  planner_agent.py  publisher_agent.py  reviewer_agent.py  smm_agent.py  summarizer_agent.py  translator_agent.py  writer_agent.py
config/: settings.py
core/: logging.py  models.py  state_storage.py  storage.py  workflow_progress.py
data/: ai_rss_sources_master.json  sources.json
graph/: builder.py
scripts/: delete_article.py
tests/: test_feeds.py  test_qwen_vllm.py  test_telegram.py
tools/: embedding_tool.py  publication_tool.py  rss_parser.py
