[project]
name = "ai-news-bot"
version = "0.1.0"
description = "A Telegram bot for automatically posting the latest AI news."
authors = [{ name = "Vitaliy Babchuk", email = "babchuk.vit@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    # LangChain Core Stack
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.30",
    "langgraph>=0.0.30",
    # Utilities
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.12",
    "rich>=14.2.0",
    "beautifulsoup4>=4.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
