[project]
name = "ai-news-bot"
version = "0.1.0"
description = "A Telegram bot for automatically posting the latest AI news."
authors = [{ name = "Vitaliy Babchuk", email = "babchuk.vit@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    # Core Logic & Graphs
    "langgraph>=0.0.30",
    "langchain>=0.1.0",          

    # AI Clients & Embeddings
    "openai>=1.0.0",              
    "langchain-huggingface>=1.0.0", 
    "sentence-transformers>=3.0.0", 

    # Database
    "chromadb>=0.4.0",

    # Telegram
    "aiogram>=3.0.0",

    # Data Fetching & Processing
    "feedparser>=6.0.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",

    # Configuration
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]