[project]
name = "ai-news-bot"
version = "0.1.0"
description = "A bot for automatically posting the latest AI news."
authors = [{ name = "Vitaliy Babchuk", email = "babchuk.vit@gmail.com" }]
requires-python = ">=3.10"

dependencies = [
    "langgraph>=0.0.30",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.4.0",
    "aiogram>=3.0.0",
    "feedparser>=6.0.0",
    "requests>=2.30.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "tzdata>=2024.1",
    "vk-api>=11.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]
